# dagster-mssql-bcp

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post_start.sh  setup_database.sh  setup_devcontainer.sh  setup_drivers.sh
.github/workflows/: python-package.yml  python-publish.yml  python-test.yml
dagster_mssql_bcp_core/: pyproject.toml
dagster_mssql_bcp_core/dagster_mssql_bcp_tests/: test_asset_schema.py
dagster_mssql_bcp_core/src/dagster_mssql_bcp_core/: __init__.py  bcp_core.py  bcp_io_manager_core.py  mssql_connection.py  utils.py
dagster_mssql_bcp_tests/bcp_core/: test_asset_schema.py  test_utils.py
dagster_mssql_bcp_tests/bcp_pandas/: test_bcp.py  test_io_manager.py
dagster_mssql_bcp_tests/bcp_polars/: test_bcp.py  test_io_manager.py  test_resource.py
dagster_mssql_bcp_tests/dagster/: launcher.py
dagster_mssql_bcp_tests/fixtures/: format_files.py
dagster_mssql_pandas/: pyproject.toml
dagster_mssql_pandas/dagster_mssql_pandas_tests/: test_bcp.py  test_io_manager.py
dagster_mssql_pandas/src/dagster_mssql_pandas/: pandas_mssql_bcp.py  pandas_mssql_io_manager.py
dagster_mssql_polars/: pyproject.toml
dagster_mssql_polars/dagster_mssql_polars_tests/: test_bcp.py  test_io_manager.py
dagster_mssql_polars/src/dagster_mssql_polars/: polars_mssql_bcp.py  polars_mssql_io_manager.py
docs/: assets.md  bcp.md  dev.md  io_manager.md  xml_and_geo.md
examples/: basic_pandas.py  basic_polars.py  time_partition.py
src/dagster_mssql_bcp/: __init__.py
src/dagster_mssql_bcp/bcp_core/: __init__.py  asset_schema.py  bcp_core.py  bcp_io_manager_core.py  bcp_logger.py  bcp_resource.py  shell.py  shell_exec.py  utils.py
src/dagster_mssql_bcp/bcp_pandas/: __init__.py  pandas_mssql_bcp.py  pandas_mssql_io_manager.py  pandas_mssql_resource.py
src/dagster_mssql_bcp/bcp_polars/: __init__.py  polars_mssql_bcp.py  polars_mssql_io_manager.py  polars_mssql_resource.py
