[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-mssql-bcp"
version = "0.0.1"
dependencies = [
    "dagster",
    "dagster_shell",
    "pendulum",
    "pyodbc",

    "polars",
    "pandas"
]

requires-python = ">=3.8"
authors = [
  { name = "Cody Scott", email = "carry-retort01@icloud.com"}
]

readme = "README.md"
license = {file = "LICENSE.txt"}

pandas=[
  "pandas"
]

polars=[
  "polars"
]

all = [
  "dagster-mssql-bcp[polars,pandas]"
]

[project.optional-dependencies]
dev = [
    "pandas",
    "polars",
    "dagster-webserver",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "black",
    "ruff",
]
