[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-mssql-bcp"
version = "0.0.7"
dependencies = [
    "dagster",
    
    "pendulum",
    "pyodbc",
    "polars",
    "pandas"
]

requires-python = ">=3.8"
authors = [
  { name = "Cody Scott", email = "carry-retort01@icloud.com"}
]

readme = "README.md"
license = {file = "LICENSE.txt"}

pandas=[
  "pandas"
]

polars=[
  "polars"
]

all = [
  "dagster-mssql-bcp[polars,pandas]"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/cody-scott/dagster-mssql-bcp"
Documentation = "https://github.com/cody-scott/dagster-mssql-bcp/tree/main/docs"
Repository = "https://github.com/cody-scott/dagster-mssql-bcp.git"
Issues = "https://github.com/cody-scott/dagster-mssql-bcp/issues"
