[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-mssql-pandas"
version = "0.0.1"
dependencies = [
    "dagster-mssql-bcp-core",
    "pandas",
]

requires-python = ">=3.8"
authors = [
  { name = "Cody Scott", email = "carry-retort01@icloud.com"}
]

readme = "README.md"
license = {file = "LICENSE.txt"}
