[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-mssql-polars"
version = "0.0.1"
dependencies = [
    "dagster-mssql-bcp-core",
    "polars",
]

requires-python = ">=3.8"
authors = [
  { name = "Cody Scott", email = "carry-retort01@icloud.com"}
]

readme = "README.md"
license = {file = "LICENSE.txt"}
